--- a/NsuLabs/NsuLabs.csproj
+++ b/NsuLabs/NsuLabs.csproj
@@ -8,4 +8,25 @@
     </PropertyGroup>
 
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+
+
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Cards\Cards.csproj" />
+        <ProjectReference Include="..\CardGameStrategies\CardGameStrategies.csproj" />
+
+    <ItemGroup>
+      <Folder Include="Strategies\" />
+    </ItemGroup>
+
+    </ItemGroup>
+
+
+
+
+
 </Project>
