--- a/NsuLabs/NsuLabs.csproj
+++ b/NsuLabs/NsuLabs.csproj
@@ -9,8 +9,11 @@
 
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.15" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.15" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+      <PackageReference Include="SQLite" Version="3.13.0" />
 
 
     </ItemGroup>
@@ -19,6 +22,7 @@
         <ProjectReference Include="..\Cards\Cards.csproj" />
         <ProjectReference Include="..\CardGameStrategies\CardGameStrategies.csproj" />
         <ProjectReference Include="..\GameExperiments\GameExperiments.csproj" />
+
 
 
     </ItemGroup>
